syntax = "proto3";

// create directory;package
option go_package = "./watcher;watcher";

service WatcherService {
    // PoA to Service
    rpc ImAlive(AliveInfo) returns (AliveVoid);

    // Watcher to Service
    rpc GetAlive(AliveVoid) returns (AliveInfo);
}

message AliveVoid {}

message AliveInfo {
    int64 mqtt_publish_timestamp = 1;
    repeated string poa_args = 2;
}